--- a/advance.html
+++ b/advance.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
-		<title>THE EMPIRE DID NOTHING WRONG</title>
+		<title>Imperial Advancements</title>
 	</head>
 	<body class="grid">
 		</div> 
@@ -23,30 +23,27 @@
 					<a class="cursor" href="misconception.html"><center>Misconceptions of the Empire</center></a>
 			</div>
 				<br>
-				<img src="Images/homepageprop.jpg"  height="375" width="250">
+				<img src="Images/education.jpg"  height="375" width="250">
+				<img src="Images/avenge.jpg"  height="375" width="250">
 			</center>
 		</div>
 		<div class="title">
 			<center>
-				<h1>THE EMPIRE DID NOTHING WRONG</h1>
+				<h1>IMPERIAL ADVANCEMENTS</h1>
 				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
 		<center>
 			<div class="caption">
-				<img src="Images/changemymind.jpg" height="400" width="525">
+				<img src="Images/enlisttoday.jpg" height="400" width="525">
 				<span class="captiontext">Change my mind</span>
 			</div>
-			<p>You were always told who the good guys were. How the Rebels were “Saviors” and how the Empire was evil. 
-			They told you that the Empire was nothing more than oppressive force who did nothing but control the innocent members of the galaxy? 
-			Well, they taught you false! They lied to you! But fear not! Because with this website, you shall now know the truth: The Empire did Nothing Wrong!</p>
-				<p>Click the links below to go to a new page (not a new hope hehehehe) You can also zip through other pages with the Navigation bar on the Side.</p>
-				<a class="cursor" href=""><p>Imperial Advancements</p></a>
-				<a class="cursor" href=""><p>Benevolent Empire</p></a>
-				<a class="cursor" href=""><p>Jedi Corruptions</p></a>
-				<a class="cursor" href=""><p>Rebel Scum</p></a>
-				<a class="cursor" href=""><p>Misconceptions of the Empire</p></a>
+			<p>They taught you that the Empire only made the galaxy worse. Well that was not true, for a fact. The empire did many good things that NO ONE will talk about. 
+			You don’t believe me? Well, I will list a few. One thing was that the Senate and Jedi were corrupt (<a class="cursor" href="corrutption.html">see here</a>). 
+			The Empire came to power and got rid of them, restoring order and stability. Another thing the Empire did was destroy the Trade Federation. 
+			“Why was this good?” you may ask. Well, they were a corporation who had power in the Senate and was allowed to bend the rules and bully the galaxy. 
+			The Empire got rid of this so that there was freedom from them. The Empire also increased security and police action, making sure that the galaxy was safe.</p>
 		</center>
 		</div>
 	</body>
