--- a/scum.html
+++ b/scum.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
-		<title>THE EMPIRE DID NOTHING WRONG</title>
+		<title>REBEL SCUM</title>
 	</head>
 	<body class="grid">
 		</div> 
@@ -23,31 +23,25 @@
 					<a class="cursor" href="misconception.html"><center>Misconceptions of the Empire</center></a>
 			</div>
 				<br>
-				<img src="Images/homepageprop.jpg"  height="375" width="250">
+				<img src="Images/terrorists.jpg"  height="375" width="250">
+				<img src="Images/senators.png"  height="375" width="250">
 			</center>
 		</div>
 		<div class="title">
 			<center>
-				<h1>THE EMPIRE DID NOTHING WRONG</h1>
-				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
+				<h1>THE REBELS ARE EVIL SCUM</h1>
+				<marquee direction="up"><h3>(TERRORIST SCUM)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
 		<center>
 			<div class="caption">
-				<img src="Images/changemymind.jpg" height="400" width="525">
+				<img src="Images/rebelscum.jpg" height="400" width="525">
 				<span class="captiontext">Change my mind</span>
 			</div>
 			<p>You were always told who the good guys were. How the Rebels were “Saviors” and how the Empire was evil. 
 			They told you that the Empire was nothing more than oppressive force who did nothing but control the innocent members of the galaxy? 
 			Well, they taught you false! They lied to you! But fear not! Because with this website, you shall now know the truth: The Empire did Nothing Wrong!</p>
-				<p>Click the links below to go to a new page (not a new hope hehehehe) You can also zip through other pages with the Navigation bar on the Side.</p>
-				<a class="cursor" href=""><p>Imperial Advancements</p></a>
-				<a class="cursor" href=""><p>Benevolent Empire</p></a>
-				<a class="cursor" href=""><p>Jedi Corruptions</p></a>
-				<a class="cursor" href=""><p>Rebel Scum</p></a>
-				<a class="cursor" href=""><p>Misconceptions of the Empire</p></a>
-		</center>
 		</div>
 	</body>
 </html>
