--- a/corrupt.html
+++ b/corrupt.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
-		<title>THE EMPIRE DID NOTHING WRONG</title>
+		<title>JEDI CORRUPTIONS</title>
 	</head>
 	<body class="grid">
 		</div> 
@@ -23,30 +23,27 @@
 					<a class="cursor" href="misconception.html"><center>Misconceptions of the Empire</center></a>
 			</div>
 				<br>
-				<img src="Images/homepageprop.jpg"  height="375" width="250">
+				<img src="Images/order66.jpg"  height="375" width="250">
+				<img src="Images/lead.jpg"  height="375" width="250">
 			</center>
 		</div>
 		<div class="title">
 			<center>
-				<h1>THE EMPIRE DID NOTHING WRONG</h1>
+				<h1>THE JEDI ARE CORRUPT</h1>
 				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
 		<center>
 			<div class="caption">
-				<img src="Images/changemymind.jpg" height="400" width="525">
-				<span class="captiontext">Change my mind</span>
+				<img src="Images/jediareevil.jpg" height="400" width="675">
+				<span class="captiontext">They're evil!</span>
 			</div>
-			<p>You were always told who the good guys were. How the Rebels were “Saviors” and how the Empire was evil. 
-			They told you that the Empire was nothing more than oppressive force who did nothing but control the innocent members of the galaxy? 
-			Well, they taught you false! They lied to you! But fear not! Because with this website, you shall now know the truth: The Empire did Nothing Wrong!</p>
-				<p>Click the links below to go to a new page (not a new hope hehehehe) You can also zip through other pages with the Navigation bar on the Side.</p>
-				<a class="cursor" href=""><p>Imperial Advancements</p></a>
-				<a class="cursor" href=""><p>Benevolent Empire</p></a>
-				<a class="cursor" href=""><p>Jedi Corruptions</p></a>
-				<a class="cursor" href=""><p>Rebel Scum</p></a>
-				<a class="cursor" href=""><p>Misconceptions of the Empire</p></a>
+			<p>They told you that the light side were the saviors of the oppressive Dark Side. Well that was not true, for a fact. 
+			The Jedi were very corrupt and had many flaws as well. Firstly, the Jedi were very arrogant. They believed that they were the center of the universe. 
+			They’ve went to even calling a Gungan a “pathetic life form.” They’ve also brainwashed people with the force, calling the victim’s “weak-minded.” The Jedi were also very weak on something important: Honesty. 
+			Obi Wan Kenobi, one of the greatest Jedi, cut off Anakin’s arms and legs, and then told his son that it was “Darth Vader.” Wow, someone being lied to like that. 
+			They never allowed emotion, claiming it was “detrimental”. They’ve also abducted children as well, separating them from their families, and military training them.</p>
 		</center>
 		</div>
 	</body>
