--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 			</div>
 				<br>
 				<img src="Images/homepageprop.jpg"  height="337.5" width="225">
-			</center>
+			<div class="caption">
+				<img src="Images/tovictory.jpg"  height="337.5" width="225">
+				<span class="captiontext">To Victory (Imperial Navy)</span>
+			</div>			</center>
 		</div>
 		<div class="title">
 			<center>
