--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<img src="Images/homepageprop.jpg"  height="337.5" width="225">
 			<div class="caption">
 				<img src="Images/tovictory.jpg"  height="337.5" width="225">
-				<span class="captiontext">To Victory (Imperial Navy)</span>
+				<span class="captiontext">TO VICTORY (Imperial Navy)</span>
 			</div>			</center>
 		</div>
 		<div class="title">
