--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			They told you that the Empire was nothing more than oppressive force who did nothing but control the innocent members of the galaxy? 
 			Well, they taught you false! They lied to you! But fear not! Because with this website, you shall now know the truth: The Empire did Nothing Wrong!</p>
 				<p>Click the links below to go to a new page (not a new hope hehehehe) You can also zip through other pages with the Navigation bar on the Side.</p>
-				<a class="cursor" href=""><p>Imperial Advancements</p></a>
-				<a class="cursor" href=""><p>Benevolent Empire</p></a>
-				<a class="cursor" href=""><p>Jedi Corruptions</p></a>
-				<a class="cursor" href=""><p>Rebel Scum</p></a>
-				<a class="cursor" href=""><p>Misconceptions of the Empire</p></a>
+				<a class="cursor" href="advance.html"><p>Imperial Advancements</p></a>
+				<a class="cursor" href="benevolent.html"><p>Benevolent Empire</p></a>
+				<a class="cursor" href="corrupt.html"><p>Jedi Corruptions</p></a>
+				<a class="cursor" href="scum.html"><p>Rebel Scum</p></a>
+				<a class="cursor" href="misconception.html"><p>Misconceptions of the Empire</p></a>
 		</center>
 		</div>
 	</body>
