--- a/scum.html
+++ b/scum.html
@@ -37,11 +37,11 @@
 		<center>
 			<div class="caption">
 				<img src="Images/rebelscum.jpg" height="400" width="525">
-				<span class="captiontext">Change my mind</span>
+				<span class="captiontext">WHEEEEEEEEL OF FORTUUNNNE!</span>
 			</div>
-			<p>You were always told who the good guys were. How the Rebels were “Saviors” and how the Empire was evil. 
-			They told you that the Empire was nothing more than oppressive force who did nothing but control the innocent members of the galaxy? 
-			Well, they taught you false! They lied to you! But fear not! Because with this website, you shall now know the truth: The Empire did Nothing Wrong!</p>
+			<p>This section will not just cover the Rebels, but also the Republic. The Rebels, seen as “saviors”, were nothing more than corrupt leaders who wanted power.
+			Don't believe me? Stay and you'll see
+			</p>
 		</div>
 	</body>
 </html>
