--- a/advance.html
+++ b/advance.html
@@ -37,7 +37,7 @@
 		<center>
 			<div class="caption">
 				<img src="Images/enlisttoday.jpg" height="400" width="525">
-				<span class="captiontext">Change my mind</span>
+				<span class="captiontext">Help the Empire</span>
 			</div>
 			<p>They taught you that the Empire only made the galaxy worse. Well that was not true, for a fact. The empire did many good things that NO ONE will talk about. 
 			You don’t believe me? Well, I will list a few. One thing was that the Senate and Jedi were corrupt (<a class="cursor" href="corrutption.html">see here</a>). 
