--- a/benevolent.html
+++ b/benevolent.html
@@ -37,7 +37,7 @@
 		<center>
 			<div class="caption">
 				<img src="Images/power.jpg" height="400" width="525">
-				<span class="captiontext">Change my mind</span>
+				<span class="captiontext">Super Caring</span>
 			</div>
 			<p>“Oh, the empire were Nazis!” “They enforced their will upon others and killed who didn’t!” Well, to quote Dwight Schrute: “False”. They cared about the Galaxy. 
 			As I mentioned <a class="cursor" href="advance.html">here</a>, they cared about security and had police forces to make sure the galaxy was safe. 
