--- a/advance.html
+++ b/advance.html
@@ -30,17 +30,17 @@
 		<div class="title">
 			<center>
 				<h1>IMPERIAL ADVANCEMENTS</h1>
-				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
+				<marquee direction="up"><h3 style="color:white">(THEY'VE HELPED US MORE THAN YOU THINK)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
 		<center>
 			<div class="caption">
 				<img src="Images/enlisttoday.jpg" height="400" width="525">
-				<span class="captiontext">Help the Empire</span>
+				<span class="captiontext">Help the Empire!</span>
 			</div>
 			<p>They taught you that the Empire only made the galaxy worse. Well that was not true, for a fact. The empire did many good things that NO ONE will talk about. 
-			You don’t believe me? Well, I will list a few. One thing was that the Senate and Jedi were corrupt (<a class="cursor" href="corrutption.html">see here</a>). 
+			You don’t believe me? Well, I will list a few. One thing was that the Senate and Jedi were corrupt (<a class="cursor" href="corrupt.html">see here</a>). 
 			The Empire came to power and got rid of them, restoring order and stability. Another thing the Empire did was destroy the Trade Federation. 
 			“Why was this good?” you may ask. Well, they were a corporation who had power in the Senate and was allowed to bend the rules and bully the galaxy. 
 			The Empire got rid of this so that there was freedom from them. The Empire also increased security and police action, making sure that the galaxy was safe.</p>
