--- a/corrupt.html
+++ b/corrupt.html
@@ -30,7 +30,7 @@
 		<div class="title">
 			<center>
 				<h1>THE JEDI ARE CORRUPT</h1>
-				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
+				<marquee direction="up"><h3 style="color:white">(THEY LIED TO YOU)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
