--- a/benevolent.html
+++ b/benevolent.html
@@ -24,7 +24,10 @@
 			</div>
 				<br>
 				<img src="Images/friend.jpg"  height="337.5" width="225">
-				<img src="Images/keephimflying.jpg"  height="337.5" width="225">
+			<div class="caption">
+				<img src="Images/cancer.jpg" height="337.5" width="225">
+				<span class="captiontext">How Wholesome</span>
+			</div>
 			</center>
 		</div>
 		<div class="title">
@@ -36,7 +39,7 @@
 		<div class="titlebody">
 		<center>
 			<div class="caption">
-				<img src="Images/power.jpg" height="400" width="525">
+				<img src="Images/hospital.jpg" height="400" width="575">
 				<span class="captiontext">Super Caring</span>
 			</div>
 			<p>“Oh, the empire were Nazis!” “They enforced their will upon others and killed who didn’t!” Well, to quote Dwight Schrute: “False”. They cared about the Galaxy. 
