--- a/scum.html
+++ b/scum.html
@@ -40,7 +40,18 @@
 				<span class="captiontext">WHEEEEEEEEL OF FORTUUNNNE!</span>
 			</div>
 			<p>This section will not just cover the Rebels, but also the Republic. The Rebels, seen as “saviors”, were nothing more than corrupt leaders who wanted power.
-			Don't believe me? Stay and you'll see
+			Many claim that the Empire was destructive, but the Rebels were far more. Don't believe me? Then let me bring to you: The Death Star. 
+			Home to <a class="cursor" href="https://entertainment.howstuffworks.com/death-star7.htm">at least 1,161,293</a> Imperials, at least what the Rebels claim. 
+			But during the Battle, or should we say, massacre of Yavin, there was much more.
+			<br>800 <b>Million</b> were killed by the Rebels. You read the number right. And even that huge death toll wasn't all that they did.
+			<br>
+			The rebels did this all to bring back the Republic. Many think that the Republic is the good guys. Well, it wasn't. The Republic was built on slavery, corruption, and civil war. Dont believe me?
+			In the prequels, the Wookies on Kashyyk were exploited, them being forced into battle as pawns, only getting decimated. What about the Empire? Left alone. The Ewoks on Endor were allowed to live
+			as they pleased, even with an Imperial base there. You may bring up the Death Star blowing up Alderaan, but reconsider. The Death Star was under the command by 
+			<a href="https://vignette.wikia.nocookie.net/starwars/images/c/c1/Tarkininfobox.jpg/revision/latest?cb=20100620213033">Admiral Wilhuff Tarkin</a>, not Lord Vader or Emperor Palpatine. 
+			Plus, while Alderaan was said to be a "peaceful" state, reconsider. Leia, who said this, just lied about the location of a Rebel base. And who was the Senator of Alderaan?
+			<a href="https://vignette.wikia.nocookie.net/starwars/images/5/50/Bail_Organa_Mug.jpg/revision/latest?cb=20080823033853">Senator Bail Organa</a>, who just so happened to be a Republican Senator, 
+			and a supporter for the Rebellion. So, was Alderaan really a "peaceful planet"? My point.
 			</p>
 		</div>
 	</body>
