--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<div class="caption">
 				<img src="Images/tovictory.jpg"  height="337.5" width="225">
 				<span class="captiontext">TO VICTORY (Imperial Navy)</span>
-			</div>			</center>
+			</div>
+			<img src="Images/keephimflying.jpg"  height="337.5" width="225">			
+			</center>
 		</div>
 		<div class="title">
 			<center>
