--- a/corrupt.html
+++ b/corrupt.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="Images/duel.png"/>
 		<title>JEDI CORRUPTIONS</title>
 	</head>
 	<body class="grid">
