--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="icon" type="image/vnd.microsoft.icon"
+		href="Images/favicon.ico"/>
 		<title>THE EMPIRE DID NOTHING WRONG</title>
 	</head>
 	<body class="grid">
