--- a/misconception.html
+++ b/misconception.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="Images/cookie.png"/>
 		<title>MINCONCEPTIONS</title>
 	</head>
 	<body class="grid">
@@ -36,7 +37,7 @@
 		<div class="titlebody">
 		<center>
 			<div class="caption">
-				<img src="Images/cookie.png" height="400" width="525">
+				<img src="Images/cookies.png" height="400" width="525">
 				<span class="captiontext">Free Cookies!</span>
 			</div>
 			<p>They taught you that the Empire only made the galaxy worse. Well that was not true, for a fact. Let’s touch upon a popular subject, “The Dark Side,” as they call it. 
