--- a/scum.html
+++ b/scum.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link href= "stylesheet.css" type="text/css" rel="stylesheet">		
+		<link rel="icon" type="image/png" href="Images/rebelscum.png"/>
 		<title>REBEL SCUM</title>
 	</head>
 	<body class="grid">
