--- a/advance.html
+++ b/advance.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="Images/tie.png"/>
 		<title>Imperial Advancements</title>
 	</head>
 	<body class="grid">
