--- a/benevolent.html
+++ b/benevolent.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="Images/bobafett.png"/>
 		<title>Benevolent Empire <3</title>
 	</head>
 	<body class="grid">
