--- a/advance.html
+++ b/advance.html
@@ -31,7 +31,7 @@
 		<div class="title">
 			<center>
 				<h1>IMPERIAL ADVANCEMENTS</h1>
-				<marquee direction="up"><h3 style="color:white">(THEY'VE HELPED US MORE THAN YOU THINK)</h3></marquee>
+				<marquee direction="up"><h3>(THEY'VE HELPED US MORE THAN YOU THINK)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
