--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
-		<link rel="icon" type="image/vnd.microsoft.icon"
-		href="Images/favicon.ico"/>
+		<link rel="icon" type="image/vnd.microsoft.icon" href="Images/favicon.ico"/>
 		<title>THE EMPIRE DID NOTHING WRONG</title>
 	</head>
 	<body class="grid">
@@ -36,7 +35,7 @@
 		<div class="title">
 			<center>
 				<h1>THE EMPIRE DID NOTHING WRONG</h1>
-				<marquee direction="up"><h3 style="color:white">(YOU WERE BRAINWASHED)</h3></marquee>
+				<marquee direction="up"><h3>(YOU WERE BRAINWASHED)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
