--- a/benevolent.html
+++ b/benevolent.html
@@ -34,7 +34,7 @@
 		<div class="title">
 			<center>
 				<h1>THE EMPIRE IS BENEVOLENT</h1>
-				<marquee direction="up"><h3 style="color:white">(very loving <3)</h3></marquee>
+				<marquee direction="up"><h3>(very loving <3)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
