--- a/corrupt.html
+++ b/corrupt.html
@@ -31,7 +31,7 @@
 		<div class="title">
 			<center>
 				<h1>THE JEDI ARE CORRUPT</h1>
-				<marquee direction="up"><h3 style="color:white">(THEY LIED TO YOU)</h3></marquee>
+				<marquee direction="up"><h3>(THEY LIED TO YOU)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
