--- a/benevolent.html
+++ b/benevolent.html
@@ -48,7 +48,8 @@
 			Another thing the Empire did was liberate the poor clones who were controlled by the Republic. With the Empire, they were all granted freedom. Now, let’s talk about the Death Star.
 			“It was a tool used for genocide, it was a weapon” many argue. But that isn’t all true. The Death Star was again built to maintain order within the galaxy. 
 			It wasn’t solely created to show power. Yes, the Death Star blew up Alderaan, but it was Rebel (or should I say, terrorist) base in the end. The Death star also created Jobs. 
-			Many collaborated to build the Death star, and it was also home to many people working. However, the rebels came, and blew up the home of many, and killed many as well.
+			Many collaborated to build the Death star, and it was also home to many people working. However, the rebels came, and blew up the home of many, and killed many as well. Yet they teach you
+			to see that as a positive victory!
 			</p>
 		</center>
 		</div>
