--- a/corrupt.html
+++ b/corrupt.html
@@ -44,7 +44,8 @@
 			The Jedi were very corrupt and had many flaws as well. Firstly, the Jedi were very arrogant. They believed that they were the center of the universe. 
 			They’ve went to even calling a Gungan a “pathetic life form.” They’ve also brainwashed people with the force, calling the victim’s “weak-minded.” The Jedi were also very weak on something important: Honesty. 
 			Obi Wan Kenobi, one of the greatest Jedi, cut off Anakin’s arms and legs, and then told his son that it was “Darth Vader.” Wow, someone being lied to like that. 
-			They never allowed emotion, claiming it was “detrimental”. They’ve also abducted children as well, separating them from their families, and military training them.</p>
+			They never allowed emotion, claiming it was “detrimental”. They’ve also abducted children as well, separating them from their families, and military training them. So you really think that
+			they're the "light" side?</p>
 		</center>
 		</div>
 	</body>
