--- a/scum.html
+++ b/scum.html
@@ -52,7 +52,7 @@
 			<a href="https://vignette.wikia.nocookie.net/starwars/images/c/c1/Tarkininfobox.jpg/revision/latest?cb=20100620213033">Admiral Wilhuff Tarkin</a>, not Lord Vader or Emperor Palpatine. 
 			Plus, while Alderaan was said to be a "peaceful" state, reconsider. Leia, who said this, just lied about the location of a Rebel base. And who was the Senator of Alderaan?
 			<a href="https://vignette.wikia.nocookie.net/starwars/images/5/50/Bail_Organa_Mug.jpg/revision/latest?cb=20080823033853">Senator Bail Organa</a>, who just so happened to be a Republican Senator, 
-			and a supporter for the Rebellion. So, was Alderaan really a "peaceful planet"? My point.
+			and a supporter for the Rebellion. So, was Alderaan really a "peaceful planet"? My point, said and done.
 			</p>
 		</div>
 	</body>
