--- a/misconception.html
+++ b/misconception.html
@@ -31,7 +31,7 @@
 		<div class="title">
 			<center>
 				<h1>MISCONCEPTIONS OF THE EMPIRE</h1>
-				<marquee direction="up"><h3>(THE DARK SIDE ISN'T EVIL)</h3></marquee>
+				<marquee direction="up"><h3>(CALL TO ACTION)</h3></marquee>
 			</center>
 		</div>
 		<div class="titlebody">
