--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<a class="cursor" href="corrupt.html"><p>Jedi Corruptions</p></a>
 				<a class="cursor" href="scum.html"><p>Rebel Scum</p></a>
 				<a class="cursor" href="misconception.html"><p>Misconceptions of the Empire</p></a>
+				<div class="caption">
+					<a class="cursor" href="badgrid.html"><p>Bad Grid for evidence </p></a>
+				<span class="captiontext">THIS IS NOT PART OF THE SITE! This is for School evidence</span>				
 		</center>
 		</div>
 	</body>
