--- a/misconception.html
+++ b/misconception.html
@@ -42,7 +42,8 @@
 			</div>
 			<p>They taught you that the Empire only made the galaxy worse. Well that was not true, for a fact. Let’s touch upon a popular subject, “The Dark Side,” as they call it. 
 			They always taught you that is is evil. But think about it. Is it really? Jedis force their kin to close of their emotions, and dehumanize themselves. Sith do not belive that
-			They believe that emotions are something you embrace. That's it. But the Jedi paint us evil with that. So are The Sith really that bad? No. Exactly. You've been lied to. Its time to do the right thing.
+			They believe that emotions are something you embrace. That's it. But the Jedi paint us evil with that. 
+			So are The Sith really that bad? No. Exactly. You've been lied to. Its time to do the right thing.
 			My call to you is to support the Empire. “How?” you may ask. Well, spread the word. Teach people the truth. 
 			We cannot and Shall not stand to lies and Brainwashing. We must stand for those who are right!.</p>
 		</center>
