--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 				<img src="Images/tovictory.jpg"  height="337.5" width="225">
 				<span class="captiontext">TO VICTORY (Imperial Navy)</span>
 			</div>
-			<img src="Images/keephimflying.jpg"  height="337.5" width="225">			
+			<img src="Images/keephimflying.jpg"  height="337.5" width="225">
+			<p>Visit 
+			<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+			to show your allegiance!</p>
 			</center>
 		</div>
 		<div class="title">
