--- a/misconception.html
+++ b/misconception.html
@@ -26,6 +26,9 @@
 				<br>
 				<img src="Images/darkside.jpg"  height="337.5" width="225">
 				<img src="Images/loyal.jpg"  height="337.5" width="225">
+			<p>Visit 
+			<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+			to show your allegiance!</p>
 			</center>
 		</div>
 		<div class="title">
@@ -46,6 +49,11 @@
 			So are The Sith really that bad? No. Exactly. You've been lied to. Its time to do the right thing.
 			My call to you is to support the Empire. “How?” you may ask. Well, spread the word. Teach people the truth. 
 			We cannot and Shall not stand to lies and Brainwashing. We must stand for those who are right!.</p>
+			<br>
+			<br>
+			<p>Believe me now? Visit 
+			<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+			to show your allegiance!
 		</center>
 		</div>
 	</body>
