--- a/badgrid.html
+++ b/badgrid.html
@@ -35,6 +35,9 @@
 <span class="captiontext">TO VICTORY (Imperial Navy)</span>
 </div>
 <img src="Images/keephimflying.jpg"  height="337.5" width="225">			
+<p>Visit 
+<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+to show your allegiance!</p>
 </center>
 </div>
 <div class="daramola1map">
