--- a/benevolent.html
+++ b/benevolent.html
@@ -29,6 +29,9 @@
 				<img src="Images/cancer.jpg" height="337.5" width="225">
 				<span class="captiontext">How Wholesome</span>
 			</div>
+			<p>Visit 
+			<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+			to show your allegiance!</p>
 			</center>
 		</div>
 		<div class="title">
