--- a/corrupt.html
+++ b/corrupt.html
@@ -26,6 +26,9 @@
 				<br>
 				<img src="Images/order66.jpg"  height="337.5" width="225">
 				<img src="Images/lead.jpg"  height="337.5" width="225">
+				<p>Visit 
+				<a class="cursor" target="_blank" href="https://www.reddit.com/r/EmpireDidNothingWrong/">here</a> 
+				to show your allegiance!</p>
 			</center>
 		</div>
 		<div class="title">
