--- a/misconception.html
+++ b/misconception.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href= "stylesheet.css" type="text/css" rel="stylesheet">
 		<link rel="icon" type="image/png" href="Images/cookie.png"/>
-		<title>MINCONCEPTIONS</title>
+		<title>MISCONCEPTIONS</title>
 	</head>
 	<body class="grid">
 		</div> 
